--- a/bankOpgave/src/main/resources/templates/index.html
+++ b/bankOpgave/src/main/resources/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" type="text/css" href="/topPart.css">
 </head>
 <body>
+<div th:replace="/includes/topPart :: topPart"></div>
 
 </body>
 </html>
