add thymeleaf to all html pages, create sign up & login buttons

--- a/bankOpgave/src/main/resources/templates/index.html
+++ b/bankOpgave/src/main/resources/templates/index.html
@@ -8,5 +8,11 @@
 <body>
 <div th:replace="/includes/topPart :: topPart"></div>
 
+<div>
+    <p>Create a new account with us today! <button onclick="location.href='createAccount'" type="button">Sign up!</button></p>
+
+    <p>Already a member? <button onclick="location.href='login'" type="button">Login</button></p>
+</div>
+
 </body>
 </html>
