--- a/bankOpgave/src/main/resources/templates/createAccount.html
+++ b/bankOpgave/src/main/resources/templates/createAccount.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Create Account</title>
 </head>
 <body>
+
+<form th:action
+
 
 </body>
 </html>
