--- a/bankOpgave/src/main/resources/templates/login.html
+++ b/bankOpgave/src/main/resources/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
 <body>
-
+her kan du logge ind
 </body>
 </html>
