--- a/bankOpgave/src/main/resources/templates/createAccount.html
+++ b/bankOpgave/src/main/resources/templates/createAccount.html
@@ -8,10 +8,18 @@
 
 <form th:action="@{/postAccount}" method="post">
 
-    <label>Firstname
+    <label>First name
         <input name="firstName" type="text">
     </label>
-    <input name="lastName" type="text">
+    <br>
+    <label>Last name
+        <input name="lastName" type="text">
+    </label>
+    <br>
+    <label>Password
+        <input name="password" type="text">
+    </label>
+    <br>
     <input type="submit" value="Create account">
 
 
