--- a/bankOpgave/src/main/resources/templates/insert.html
+++ b/bankOpgave/src/main/resources/templates/insert.html
@@ -6,5 +6,18 @@
 </head>
 <body>
 
+<div>
+
+    <form th:action="@{/postInsert}" method="post">
+
+        <label>Amount to insert
+            <input name="insertAmount" type="text">
+        </label>
+        <br>
+        <input type="submit" value="Login">
+
+    </form>
+</div>
+
 </body>
 </html>
