--- a/bankOpgave/src/main/resources/templates/insert.html
+++ b/bankOpgave/src/main/resources/templates/insert.html
@@ -14,7 +14,7 @@
             <input name="insertAmount" type="text">
         </label>
         <br>
-        <input type="submit" value="Login">
+        <input type="submit" value="Confirm">
 
     </form>
 </div>
