--- a/bankOpgave/src/main/resources/static/topPart.css
+++ b/bankOpgave/src/main/resources/static/topPart.css
@@ -1,13 +1,43 @@
+.navbar {
+    background-color: #333;
+    width: 100%;
+    height: 65px;
+    vertical-align: middle;
+    transform: translate(0%, -20px);
+}
+
+.navbar a {
+    position: relative;
+    text-align: center;
+    transition: all 0.3s ease;
+    padding: 0px 15px 0px 15px;
+    text-decoration: none;
+    color: beige;
+}
+
+.navbar-brand {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 65px;
+}
+
+.nav-item {
+    font-size: 20px;
+    line-height: 60px;
+}
+
+.nav-item:hover {
+    color: moccasin;
+}
+
+.topContainer {
+    position: relative;
+    text-align: center;
+}
+
 .topImage {
     width: 100%;
     height: 40vh;
-
-}
-
-.topContainer{
-    position: relative;
-    text-align: center;
-
 }
 
 #topPartText {
