--- a/bankOpgave/src/main/resources/templates/login.html
+++ b/bankOpgave/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
         </label>
         <br>
         <label>Password
-            <input name="password" type="text">
+            <input name="password" type="password">
         </label>
         <br>
         <input type="submit" value="Login">
