--- a/bankOpgave/src/main/resources/templates/createAccount.html
+++ b/bankOpgave/src/main/resources/templates/createAccount.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Account</title>
+    <link rel="stylesheet" type="text/css" href="/topPart.css">
+
 </head>
 <body>
+
+<div th:replace="/includes/topPicture :: topPicture"></div>
 
 <div >
     <p>Your Personal user ID is: <span th:text="${personalId}"></span></p>
