--- a/bankOpgave/src/main/resources/templates/includes/topPicture.html
+++ b/bankOpgave/src/main/resources/templates/includes/topPicture.html
@@ -7,19 +7,11 @@
 </head>
 <body>
 
-<div th:fragment="topPart">
+<div th:fragment="topPicture">
     <div class="topContainer">
         <img class="topImage" src="/images/header.jpg"/>
         <p id="topPartText">Bank Lé Phill</p>
     </div>
-    <div class="navbar">
-        <a class="navbar-brand" href="/userPage">Home</a>
-        <a class="nav-item" href="/insert">Insert</a>
-        <a class="nav-item" href="/withdraw">Withdraw</a>
-        <a class="nav-item" href="/transfer">Transfer</a>
-        <a class="nav-item" href="/">Logout</a>
-    </div>
-
 </div>
 
 </body>
