--- a/bankOpgave/src/main/resources/templates/index.html
+++ b/bankOpgave/src/main/resources/templates/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/topPart.css">
 </head>
 <body>
-<div th:replace="/includes/topPart :: topPart"></div>
-
+<div th:replace="/includes/topPicture :: topPicture"></div>
 <div>
     <p>Create a new account with us today! <button onclick="location.href='createAccount'" type="button">Sign up!</button></p>
 
