--- a/bankOpgave/src/main/resources/templates/insert.html
+++ b/bankOpgave/src/main/resources/templates/insert.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Insert money</title>
+    <link rel="stylesheet" type="text/css" href="/topPart.css">
+
 </head>
 <body>
+<div th:replace="/includes/topPicture :: topPicture"></div>
 
 <div>
 
