--- a/bankOpgave/src/main/resources/templates/login.html
+++ b/bankOpgave/src/main/resources/templates/login.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="/topPart.css">
+
 </head>
 <body>
+<div th:replace="/includes/topPicture :: topPicture"></div>
 
 <div>
     <h2>Hi welcome back, please enter your login information's.</h2>
