--- a/bankOpgave/src/main/resources/templates/userPage.html
+++ b/bankOpgave/src/main/resources/templates/userPage.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="/topPart.css">
 </head>
 <body>
-<div th:replace="/includes/topPart :: topPart"></div>
+<div th:replace="/includes/topPicture :: topPicture"></div>
+<div th:replace="/includes/navbar :: navbar"></div>
 
 
 <h1>Your bank information's</h1>
