--- a/bankOpgave/src/main/resources/templates/withdraw.html
+++ b/bankOpgave/src/main/resources/templates/withdraw.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Withdraw money</title>
+    <link rel="stylesheet" type="text/css" href="/topPart.css">
+
 </head>
 <body>
+<div th:replace="/includes/topPicture :: topPicture"></div>
 
 <div>
     <form th:action="@{/postWithdraw}" method="post">
