--- a/bankOpgave/src/main/resources/templates/userPage.html
+++ b/bankOpgave/src/main/resources/templates/userPage.html
@@ -11,9 +11,9 @@
 
 
 <h1>Your bank information's</h1>
-<p>First name: <span th:text="${firstName}"></span></p>
-<p>Last name: <span th:text="${lastName}"></span></p>
-<p>Balance: <span th:text="${balance}"></span></p>
+<p>First name: <span th:text="${user.firstName}"></span></p>
+<p>Last name: <span th:text="${user.lastName}"></span></p>
+<p>Balance: <span th:text="${user.balance}"></span></p>
 
 
 </body>
